[package]
name = "faust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"

[target.'cfg(unix)'.dependencies]
rlimit = "0.6"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls-native-roots", "trust-dns"]

[dependencies.tokio]
version = "1.6"
features = ["rt", "rt-multi-thread", "io-util", "io-std", "sync"]

[profile.release]
lto = true
panic = "abort"
