[package]
name = "faust"
version = "1.0.1"
authors = ["Maxime Augier <max@xolus.net>"]
edition = "2018"
license = "MIT"
description = "Fast Async Url STatus checker"
repository = "https://github.com/maugier/faust"
homepage = "https://github.com/maugier/faust"
keywords = ["cli"]

[dependencies.clap]
version = "3.2"
features = ["derive"]

[target.'cfg(unix)'.dependencies]
rlimit = "0.6"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls-native-roots", "trust-dns"]

[dependencies.tokio]
version = "1.19"
features = ["rt", "rt-multi-thread", "io-util", "io-std", "sync"]

[profile.release]
lto = true
panic = "abort"
